# super_lights

./: .gitignore  CMakeLists.txt  README.md  partitions.csv
main/: CMakeLists.txt  main.c
main/include/: button_control.h  display_control.h  gpio_control.h  ir_control.h  memory_control.h  menu_control.h  power_control.h  rgb_led_control.h  settings_control.h  speaker_control.h  us_control.h
main/src/: button_control.c  display_control.c  gpio_control.c  ir_control.c  memory_control.c  menu_control.c  power_control.c  rgb_led_control.c  settings_control.c  speaker_control.c  us_control.c
