idf_component_register(SRCS "main.c"
                            "src/power_control.c"
                            "src/gpio_control.c"
                            "src/button_control.c"
                            "src/display_control.c"
                            "src/settings_control.c"
                            "src/menu_control.c"
                            "src/rgb_led_control.c"
                            "src/ir_control.c"
                            "src/us_control.c"
                            "src/speaker_control.c"
                    INCLUDE_DIRS "include"
                    REQUIRES driver esp_timer)